--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "test": "karma start ./test-config/karma.conf.js",
+    "test-ci": "karma start ./test-config/karma.conf.js --single-run",
+    "e2e-update": "webdriver-manager update --standalone false --gecko false",
+    "e2e-test": "protractor ./test-config/protractor.conf.js",
+    "e2e": "npm run e2e-update && npm run e2e-test"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
@@ -29,11 +34,30 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "webpack": "^4.12.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.10",
-    "typescript": "~2.6.2"
+    "@types/jasmine": "^2.8.8",
+    "@types/node": "^10.3.3",
+    "angular2-template-loader": "^0.6.2",
+    "html-loader": "^0.5.5",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "jasmine": "^3.1.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^2.0.2",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^3.0.0",
+    "null-loader": "^0.1.1",
+    "protractor": "^5.3.2",
+    "ts-loader": "^4.4.1",
+    "ts-node": "^6.1.1",
+    "typescript": "^2.9.2"
   },
   "description": "An Ionic project"
 }
